--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" defer></script>
     <script src="js/slick.min.js" defer></script>
     <script src="js/main.min.js" defer></script>
+    <script src="js/restaurants.min.js" defer></script>
 </head>
 
 <body>
@@ -253,6 +254,7 @@
             </div>
         </div>
 
+        <!-- модальное окно аутентификации -->
         <div class="modal modal-auth">
             <div class="modal-login__wrapper">
                 <div class="modal__content">
@@ -294,6 +296,47 @@
                 </div>
             </div>
         </div>
+
+        <!-- модальное окно корзины -->
+        <div class="modal modal-cart">
+            <div class="modal-login__wrapper">
+                <div class="modal__content modal-cart__content">
+                    <div class="modal-cart-close">
+                        <svg width="17px" height="17px" viewBox="0 0 17 17" version="1.1"
+                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g id="Icons" stroke="none" stroke-width="1" fill="#232323" fill-rule="evenodd"
+                               stroke-linecap="round">
+                                <g id="24-px-Icons" transform="translate(-364.000000, -124.000000)" stroke="#232323">
+                                    <g id="ic_cancel" transform="translate(360.000000, 120.000000)">
+                                        <g id="cross">
+                                            <g transform="translate(5.000000, 5.000000)" stroke-width="2">
+                                                <path d="M0,0 L14.1421356,14.1421356" id="Line"></path>
+                                                <path d="M14,0 L1.77635684e-15,14" id="Line"></path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                    <div class="modal__content-title">
+                        Корзина
+                    </div>
+                    <div class="modal-cart__items">
+<!--                        <div class="modal-cart__item">-->
+<!--                            <div class="modal-cart__item-title">Роллы</div>-->
+<!--                            <div class="modal-cart__item-price">1500 &#8381;</div>-->
+<!--                            <div class="modal-cart__action">-->
+<!--                                <div class="modal-cart__action-remove">-</div>-->
+<!--                                <div class="modal-cart__action-count">2</div>-->
+<!--                                <div class="modal-cart__action-add">+</div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+                    </div>
+<!--                    <div class="modal-cart__total-amount">1250 &#8381;</div>-->
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
@@ -302,7 +345,7 @@
                     <span>Online</span>Еда
                 </a>
                 <div class="footer__social">
-                    <a href="https://vk.ru" class="footer__social-vk">
+                    <a href="https://vk.com" class="footer__social-vk">
                         <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 23.04C0 12.1788 0 6.74826 3.37413 3.37413C6.74826 0 12.1788 0 23.04 0H24.96C35.8212 0 41.2517 0 44.6259 3.37413C48 6.74826 48 12.1788 48 23.04V24.96C48 35.8212 48 41.2517 44.6259 44.6259C41.2517 48 35.8212 48 24.96 48H23.04C12.1788 48 6.74826 48 3.37413 44.6259C0 41.2517 0 35.8212 0 24.96V23.04Z"/>
                             <path d="M25.54 34.5801C14.6 34.5801 8.3601 27.0801 8.1001 14.6001H13.5801C13.7601 23.7601 17.8 27.6401 21 28.4401V14.6001H26.1602V22.5001C29.3202 22.1601 32.6398 18.5601 33.7598 14.6001H38.9199C38.0599 19.4801 34.4599 23.0801 31.8999 24.5601C34.4599 25.7601 38.5601 28.9001 40.1201 34.5801H34.4399C33.2199 30.7801 30.1802 27.8401 26.1602 27.4401V34.5801H25.54Z"
