create sum cart

--- a/index.html
+++ b/index.html
@@ -333,6 +333,9 @@
 <!--                            </div>-->
 <!--                        </div>-->
                     </div>
+                    <div class="modal-cart__bottom">
+
+                    </div>
 <!--                    <div class="modal-cart__total-amount">1250 &#8381;</div>-->
                 </div>
             </div>
