--- a/restaurant.html
+++ b/restaurant.html
@@ -417,6 +417,9 @@
                         <!--                        </div>-->
                     </div>
                     <!--                    <div class="modal-cart__total-amount">1250 &#8381;</div>-->
+                    <div class="modal-cart__bottom">
+
+                    </div>
                 </div>
             </div>
         </div>
