create delete position cart

--- a/index.html
+++ b/index.html
@@ -97,25 +97,32 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            <!--            <div class="slider swiper">-->
-            <!--                <div class="slider__wrapper swiper-wrapper">-->
-            <!--                    <div class="slider__item swiper-slide">-->
-            <!--                        <img src="./images/slider/duna.jpg" alt="duna">-->
-            <!--                    </div>-->
+<!--        <div class="slider">-->
+<!--            <div class="container">-->
+<!--                <div class="slider__wrapper">-->
+<!--                    <div class="slider__item">-->
+<!--                        <img src="images/slider/slider-1.jpg" alt="slide-1">-->
+<!--                    </div>-->
+<!--                </div>-->
+                <!--            <div class="slider swiper">-->
+                <!--                <div class="slider__wrapper swiper-wrapper">-->
+                <!--                    <div class="slider__item swiper-slide">-->
+                <!--                        <img src="./images/slider/duna.jpg" alt="duna">-->
+                <!--                    </div>-->
 
-            <!--                    <div class="slider__item swiper-slide">-->
-            <!--                        <img src="./images/slider/jacob.jpg" alt="jacob">-->
-            <!--                    </div>-->
+                <!--                    <div class="slider__item swiper-slide">-->
+                <!--                        <img src="./images/slider/jacob.jpg" alt="jacob">-->
+                <!--                    </div>-->
 
-            <!--                    <div class="slider__item swiper-slide">-->
-            <!--                        <img src="./images/slider/kosa.jpg" alt="kosa">-->
-            <!--                    </div>-->
-            <!--                </div>-->
-            <!--                <div class="swiper-button-prev"></div>-->
-            <!--                <div class="swiper-button-next"></div>-->
-            <!--            </div>-->
-        </div>
+                <!--                    <div class="slider__item swiper-slide">-->
+                <!--                        <img src="./images/slider/kosa.jpg" alt="kosa">-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="swiper-button-prev"></div>-->
+                <!--                <div class="swiper-button-next"></div>-->
+                <!--            </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="restaurants">
             <div class="container">
@@ -323,20 +330,20 @@
                         Корзина
                     </div>
                     <div class="modal-cart__items">
-<!--                        <div class="modal-cart__item">-->
-<!--                            <div class="modal-cart__item-title">Роллы</div>-->
-<!--                            <div class="modal-cart__item-price">1500 &#8381;</div>-->
-<!--                            <div class="modal-cart__action">-->
-<!--                                <div class="modal-cart__action-remove">-</div>-->
-<!--                                <div class="modal-cart__action-count">2</div>-->
-<!--                                <div class="modal-cart__action-add">+</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <!--                        <div class="modal-cart__item">-->
+                        <!--                            <div class="modal-cart__item-title">Роллы</div>-->
+                        <!--                            <div class="modal-cart__item-price">1500 &#8381;</div>-->
+                        <!--                            <div class="modal-cart__action">-->
+                        <!--                                <div class="modal-cart__action-remove">-</div>-->
+                        <!--                                <div class="modal-cart__action-count">2</div>-->
+                        <!--                                <div class="modal-cart__action-add">+</div>-->
+                        <!--                            </div>-->
+                        <!--                        </div>-->
                     </div>
                     <div class="modal-cart__bottom">
 
                     </div>
-<!--                    <div class="modal-cart__total-amount">1250 &#8381;</div>-->
+                    <!--                    <div class="modal-cart__total-amount">1250 &#8381;</div>-->
                 </div>
             </div>
         </div>
@@ -369,7 +376,8 @@
 
                     <a href="https://fb.com" class="footer__social-fb">
                         <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                            <path clip-rule="evenodd" d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24ZM26.5016 38.1115V25.0542H30.1059L30.5836 20.5546H26.5016L26.5077 18.3025C26.5077 17.1289 26.6192 16.5001 28.3048 16.5001H30.5581V12H26.9532C22.6231 12 21.0991 14.1828 21.0991 17.8536V20.5551H18.4V25.0547H21.0991V38.1115H26.5016Z"/>
+                            <path clip-rule="evenodd"
+                                  d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24ZM26.5016 38.1115V25.0542H30.1059L30.5836 20.5546H26.5016L26.5077 18.3025C26.5077 17.1289 26.6192 16.5001 28.3048 16.5001H30.5581V12H26.9532C22.6231 12 21.0991 14.1828 21.0991 17.8536V20.5551H18.4V25.0547H21.0991V38.1115H26.5016Z"/>
                         </svg>
                     </a>
 
